# ddsm

./: LICENSE  README.md  pyproject.toml
ddsm/: __init__.py
ddsm/base/: __init__.py  _dicts.py  _estimators.py
ddsm/dicts/: __init__.py  _dicts.py  monomials.py
ddsm/estimators/: __init__.py  _edmd.py  _gedmd.py  _sindy.py
ddsm/preprocessing/: __init__.py  _koopman.py  _scaler.py
ddsm/solvers/: __init__.py  dual.py  ode.py  time_grid.py
ddsm/solvers/model/: __init__.py  _base.py  _builder.py
ddsm/utils/: __init__.py  _common.py  _equation.py  svd.py  sympy.py
samples/: check_generator_to_eq.ipynb  van_der_Pol_EDMD.ipynb  van_der_Pol_SINDy.ipynb  van_der_Pol_gEDMD.ipynb
