[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ddsm"
dynamic = ["version"]
description = "A Python library for Data-driven Dynamical Systems Modeling with the Scikit-learn compatible API "
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {"name" = "kimotu4632uz", "email" = "32472396+kimotu4632uz@users.noreply.github.com"}
]
license = {text = "MIT"}
dependencies = [
    "numpy",
    "sympy",
    "scipy",
    "scikit-learn"
]

[project.urls]
Homepage = "https://github.com/kimotu4632uz/ddsm"
Repository = "https://github.com/kimotu4632uz/ddsm.git"
Issues = "https://github.com/kimotu4632uz/ddsm/issues"

[project.optional-dependencies]
dev = [
    "ipykernel",
    "matplotlib",
    "seaborn"
]
test = []

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["ddsm"]
exclude = ["samples"]

[tool.uv]
package = true
